# psemoldyn

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  collision_task3.cuboids  eingabe-cuboid.txt  log4cxx.cfg  test.cuboids
cmake/modules/: doxygen.cmake
doxys_documentation/html/: ArrayUtils_8h.html  ArrayUtils_8h_source.html  CMakeCXXCompilerId_8cpp.html  Cuboid_8cpp.html  Cuboid_8h.html  Cuboid_8h_source.html  FileReader_8cpp.html  FileReader_8h.html  FileReader_8h_source.html  ForceUtils_8cpp.html  ForceUtils_8h.html  ForceUtils_8h_source.html  MaxwellBoltzmannDistribution_8cpp.html  MaxwellBoltzmannDistribution_8h.html  MaxwellBoltzmannDistribution_8h_source.html  MolSim_8cpp.html  ParticleContainer_8cpp.html  ParticleContainer_8h.html  ParticleContainer_8h_source.html  ParticleGenerator_8cpp.html  ParticleGenerator_8h.html  ParticleGenerator_8h_source.html  Particle_8cpp.html  Particle_8h.html  Particle_8h_source.html  README_8md.html  VTKWriter_8cpp.html  VTKWriter_8h.html  VTKWriter_8h_source.html  XYZWriter_8cpp.html  XYZWriter_8h.html  XYZWriter_8h_source.html  annotated.html  classCellData-members.html  classCellData.html  classCells-members.html  classCells.html  classCuboid-members.html  classCuboid.html  classDataArrayList__t-members.html  (+93 more)
doxys_documentation/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  (+68 more)
doxys_documentation/latex/: ArrayUtils_8h.tex  CMakeCXXCompilerId_8cpp.tex  Cuboid_8cpp.tex  Cuboid_8h.tex  FileReader_8cpp.tex  FileReader_8h.tex  ForceUtils_8cpp.tex  ForceUtils_8h.tex  MaxwellBoltzmannDistribution_8cpp.tex  MaxwellBoltzmannDistribution_8h.tex  MolSim_8cpp.tex  ParticleContainer_8cpp.tex  ParticleContainer_8h.tex  ParticleGenerator_8cpp.tex  ParticleGenerator_8h.tex  Particle_8cpp.tex  Particle_8h.tex  VTKWriter_8cpp.tex  VTKWriter_8h.tex  XYZWriter_8cpp.tex  XYZWriter_8h.tex  annotated.tex  classCellData.eps  classCellData.tex  classCells.eps  classCells.tex  classCuboid.tex  classDataArrayList__t.eps  classDataArrayList__t.tex  classDataArray__t.eps  classDataArray__t.tex  classFileReader.tex  classParticle.tex  classParticleContainer.tex  classParticleGenerator.tex  classPieceUnstructuredGrid__t.eps  classPieceUnstructuredGrid__t.tex  classPointData.eps  classPointData.tex  classPoints.eps  (+40 more)
inputs/: a2_task3_collision.xml  a2_task3_collision_lc.xml  a3_task2_collision_lc.xml  a3_task3_boundary.xml  a3_task3_collision_lc.xml  a4_task2_big.xml  a4_task2_small.xml  a4_task3.xml  a4_task4.xml  a5_membrane_corners.xml  a5_membrane_cube.xml  a5_membrane_tests.xml  a5_membrane_two_membranes.xml  a5_task1_membrane.xml  a5_task2.xml  a5_task4.xml  collision_linked_cell.xml  collision_task3.cuboids  collision_task3_lc.xml  input-fallingDrop.xml  input-particleFile.xml  input-sphere.xml
inputs/a3_task2_comparison/: a3_task2_compare_1000.xml  a3_task2_compare_1000_lc.xml  a3_task2_compare_16000.xml  a3_task2_compare_16000_lc.xml  a3_task2_compare_2000.xml  a3_task2_compare_2000_lc.xml  a3_task2_compare_4000.xml  a3_task2_compare_4000_lc.xml  a3_task2_compare_8000.xml  a3_task2_compare_8000_lc.xml
inputs/a5_task4_comparison/: a5_task4_extra_sphere.xml  a5_task4_gravity5.xml  a5_task4_mass5.xml
logs/: particle.log.REMOVED.git-id  vtkWriter.log.REMOVED.git-id
results/: aps_report_20210113_114422.html  gprof_1_none  gprof_2_array_pair  gprof_3_epsilon_sigma  gprof_4_remove_unused_functions  gprof_5_getX  gprof_6_getF  gprof_final_cluster
src/: BoundaryHandler.cpp  BoundaryHandler.h  CMakeLists.txt  Container.cpp  Container.h  Cuboid.cpp  Cuboid.h  FileReader.cpp  FileReader.h  LinkedCell.cpp  LinkedCell.h  LinkedCellContainer.cpp  LinkedCellContainer.h  MolSim.cpp  Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h  ParticleSphere.cpp  ParticleSphere.h  Profiler.cpp  Profiler.cpp~  Profiler.h  Simulation.cpp  Simulation.h  Thermostat.cpp  Thermostat.h
src/cell/: BoundaryHandler.cpp  BoundaryHandler.h  LinkedCell.cpp  LinkedCell.h  LinkedCellContainer.cpp  LinkedCellContainer.h
src/deprecated/: FileReader.cpp  FileReader.h
src/outputWriter/: VTKWriter.cpp  XYZWriter.cpp  XYZWriter.h
src/particle/: Particle.cpp  Particle.h  ParticleContainer.cpp  ParticleContainer.h  ParticleGenerator.cpp  ParticleGenerator.h
src/shapes/: Cuboid.cpp  Cuboid.h  ParticleSphere.cpp  ParticleSphere.h
src/utils/: ForceUtils.cpp  ForceUtils.h  MaxwellBoltzmannDistribution.cpp  MaxwellBoltzmannDistribution.h  XSDMapper.cpp  XSDMapper.h
src/xml/: CMakeLists.txt  input-cuboidFile.xml  input-cuboids.xml  input-particleFile.xml  input-particles.xml  makefile  molsimInput  molsimInput-pskel.cxx  molsimInput-pskel.hxx  molsimInput.cxx  molsimInput.hxx  molsimInput.xsd
tests/: CMakeLists.txt
tests/input/: input_linked_cell_fixture.xml  input_particletypes_fixture.xml  input_thermostat_fixture.xml  input_thermostat_fixture_change.xml  input_thermostat_fixture_delta.xml  input_thermostat_fixture_scale_down.xml  test_particles.particles  test_reading_negative_distance.cuboids  test_reading_negative_mass.cuboids  test_reading_negative_size.cuboids  test_reading_normal.cuboids
tests/input/xml/: molsimInput.xsd
tests/src/: BoundaryHandlerFixture.cpp  ExampleTest.cpp  LinkedCellContainerFixture.cpp  ParticleContainerFixture.cpp  ParticleGenerationFixture.cpp  ParticleGenerationTests.cpp  ParticleTypesFixture.cpp  ThermostatFixture.cpp
